--- a/homepage.css
+++ b/homepage.css
@@ -1,76 +1,194 @@
 .container{
     display:grid;
+    height:fill;
     grid-template-areas: 
-    "a a"
-    "b b"
-    "d c"
-    "d c"
-    "e e";
-    grid-template-columns:80% 20%;
-    grid-template-columns
+    "a a a a"
+    "b b b b"
+    "f f f c"
+    "d d d c "
+    "e e e e";
+    grid-template-columns: 20% 20% 20% 20%;
+    grid-row-gap:20px;
+    grid-column-gap:20px;
+    justify-content: center;
 }
+.backG{
+    background-image: url("images/tornFlag.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}  
+
 .logo{
-    display:flex;
     grid-area: a;
 }
+
 .name{
-    float: right;
+    display:flex;
+    margin-top:1vw;
 }
 
 .header{
     grid-area: b;
-    background-image:url("images/holdingFlag.jpg");
-    background-size:100%;
+    height:20vw;
+    background:rgba(150, 134, 136, 0.5);
+    background-repeat: no-repeat;
+    border-radius:20px;
+    display:flex;
+}
+
+.block{
+    display:flex;
+    margin:5vw;
+}
+
+.navA{
+    font-family:'abel', sans-serif;
+    font-size: 1.5vw;
+    color:white;
+    text-decoration:none;
+    padding:2vw;
+    display:block;
+    padding:0px 10px 0 10px;
+}
+
+.navRight{
+    border-right:1px solid white;
+}
+
+.navBlock{
+    display:flex;
+    margin-left:12vw;
+    margin-top:1vw;
+    height:35px;
+    position: relative;
 }
 
 .article{
     grid-area: c;
-    border: 2px solid black;
     padding:20px;
-    font-family:'abel', sans-serif;
+    font-family:'abel', sans-serifv;
+    border-radius:20px;
+    font-size:1vw;
+    max-height:36vw;
+    background: rgba(150, 134, 136, 0.9);
 }
 
 .mainContent{
    grid-area: d;
-   height:700px;
+   border-radius:20px;
+   background: rgba(150, 134, 136, 0.9);
+ 
+}
+
+.saleAlert{
+    grid-area:f;
+    border-radius:20px;
+    height:3vw;
+    display:flex;
+    animation:blink 0.4s infinite;
+}
+
+.laborDay{
+    display:flex;
+    margin:auto;
+}
+ 
+@keyframes blink{
+    0%, 49%{
+        background:blue;
+    }
+    50%, 100%{
+        background: red;
+    }
+}
+
+.shop{
+    display:flex;
+    justify-content: center;
+    flex-wrap:wrap;
+}
+
+.panel{
+    display:inline-block;
+    border:1px solid black;
+    margin-right:50px;
+    padding:20px 20px 30px 20px;
+    background: rgba(255, 255, 255, 0.5);
+    margin: 20px;
+    max-width:250px;
+    text-align: center;
+    border-radius:5px;
+}
+
+.panelImg{
+    max-width:100%;
+}
+
+.panel2{
+    display:inline-block;
+    border:1px solid black;
+    margin-right:50px;
+    padding:20px 20px 30px 20px;
+    background: rgba(255, 255, 255, 0.5);
+    margin: 20px;
+    max-width:50vw;
+    text-align: center;
+    border-radius:5px;
 }
 
 .footer{
     grid-area: e;
     background:black;
-    height:100px;
+    display:block;
+    text-align:center;
+    background: rgba(150, 134, 136, 0.9);
+    border-radius:10px
+}
+
+.botFoot{
+    font-family: 'abel', sans-serif;
+    font-size: 20px;
+    color:white;
+    display:inline-block;
+    padding:0px 10px 0px 10px;
+}
+
+.botA{
+    font-family: 'abel', sans-serif;
+    font-size: 20px;
+    color:white;
+    text-decoration: none;
+    display:inline-block;
+    padding:0px 10px 0px 10px;
 }
 
 h1{
     font-family:'abel', sans-serif;
-    font-size:50px;
-
+    font-size:3vw;
+    color:white;
 }
 
 h2{
     font-family:'abel', sans-serif;
-    font-size: 200px;
+    font-size: 10vw;
     color:white;
-}
-
-.image{
-    width: 100%;
 }
 
 h3{
     text-align:center;
 }
 
-.navBar{
-    margin-top:30px;
+h4{
+    color:white;
+    font-family: 'abel', sans-serif;
+    font-size: 2vw;
+    text-align: center;
 }
 
-a{
-    font-family:'abel', sans-serif;
-    font-size: 30px;
-    color:white;
-    text-decoration:none;
-    padding:25px;
+.image{
+    width:100%;
 }
 
 a:hover{
